gl33-master/src/test/deca/syntax/invalid/others/parentheseEnMoinsPrint1.deca
/*
Test sur le manque des parenthèses à la fin de print

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

{
  print("Hello";
}
